# tessellation

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  ci.sh  xplicit.lua
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  rust.yml
bbox/: Cargo.toml  lib.rs
benches/: render.rs
language-specs/: truescad-lua.lang
luascad/: Cargo.toml  lib.rs  lobject.rs  lobject_vector.rs  luascad.rs  printbuffer.rs  sandbox.rs
primitive/: Cargo.toml  bender.rs  boolean.rs  bounding_box.rs  cylinder.rs  lib.rs  mesh.rs  slab.rs  sphere.rs  transformer.rs  twister.rs
primitive/benches/: objects.rs
src/: bitset.rs  cell_configs.rs  editor.rs  lib.rs  manifold_dual_contouring.rs  menu.rs  mesh.rs  mesh_view.rs  object_widget.rs  plane.rs  qef.rs  render.rs  settings.rs  vertex_index.rs  window.rs
src/benches/: tessellation.rs
styles/: build.xml
tessellation/: Cargo.toml  lib.rs  manifold_dual_contouring.rs  qef.rs  vertex_index.rs
tessellation/benches/: tessellation.rs
types/: Cargo.toml  lib.rs
