[package]
name = "tessellation"
version = "0.8.2"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2018"

description = "3d tessellation library."
repository = "https://github.com/hmeyer/tessellation"
readme = "README.md"
keywords = ["tessellation", "3d", "manifold", "dual-contouring"]
license = "Apache-2.0 OR MIT"

[lib]
name = "tessellation"
path = "src/lib.rs"

[dependencies]
bbox = "0.11.2"
nalgebra = "0.27.1"
num-traits = "0.2.14"
once_cell = "1.7.2"
rand = "0.8.3"
rayon = "1.5.1"
simba = "0.5.1"

[dev-dependencies]
approx = "0.5.0"
bencher = "0.1.5"
implicit3d = "0.14.2"

[[bench]]
name = "tessellation"
path = "src/benches/tessellation.rs"
harness = false

[badges]
travis-ci = { repository = "hmeyer/tessellation", branch = "master" }
codecov = { repository = "hmeyer/tessellation", branch = "master", service = "github" }

[patch.crates-io]
bbox = { git = "https://github.com/dflemstr/bbox.git" }
implicit3d = { git = "https://github.com/dflemstr/implicit3d.git" }
