[package]
name = "tessellation"
version = "0.8.2"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2021"
rust-version = "1.80"

description = "3d tessellation library."
repository = "https://github.com/hmeyer/tessellation"
readme = "README.md"
keywords = ["tessellation", "3d", "manifold", "dual-contouring"]
license = "Apache-2.0 OR MIT"

[lib]
name = "tessellation"
path = "src/lib.rs"

[dependencies]
nalgebra = "0.31"
rand = "0.8"
rayon = "1"
bbox = "0.14"
num-traits = "0.2"

[dev-dependencies]
approx = "0.5"
bencher = "0.1"

[[bench]]
name = "tessellation"
path = "src/benches/tessellation.rs"
harness = false

[lints.clippy]
all = "warn"
