[package]
name = "truescad_luascad"
version = "0.2.6"
authors = ["Henning Meyer <tutmann@gmail.com>"]

[lib]
name = "truescad_luascad"
path = "lib.rs"

[dependencies]
hlua = "0.3"
bbox = "0.7"

truescad_types = { path = "../types", version = "0.2.1" }
truescad_primitive = { path = "../primitive", version = "0.6.1" }
