[package]
name = "truescad_primitive"
version = "0.4.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]

[lib]
name = "truescad_primitive"
path = "lib.rs"

[dependencies]
nalgebra = "0.14"
approx = "0.1.1"
alga = "0.5"
stl_io = "0.3.4"
truescad_types = { path = "../types", version = "0.2.1" }
truescad_bbox = { path = "../bbox", version = "0.4" }

[dev-dependencies]
bencher = "0.1.*"

[[bench]]
name = "objects"
harness = false
