[package]
name = "truescad_primitive"
version = "0.6.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]

[lib]
name = "truescad_primitive"
path = "lib.rs"

[dependencies]
nalgebra = "0.14"
approx = "0.1.1"
alga = "0.5"
stl_io = "0.3"
bbox = "0.7"
num-traits = "0.2"

[dev-dependencies]
bencher = "0.1.*"

[[bench]]
name = "objects"
harness = false
