[package]
name = "truescad_tessellation"
version = "0.4.0"
authors = ["Henning Meyer <tutmann@gmail.com>"]

[lib]
name = "truescad_tessellation"
path = "lib.rs"

[dependencies]
alga = "0.5"
nalgebra = "0.14"
rand = "0.3"
time = "0.1"
rayon = "0.7"
lazy_static = "0.2.8"
bbox = "0.7"
num-traits = "0.2"

[dev-dependencies]
approx = "0.1"
bencher = "0.1.*"


[[bench]]
name = "tessellation"
harness = false
